changed root page added stylesheet

--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Url:</strong>
-  <%= @picture.url %>
+  <%= image_tag @picture.url %>
 </p>
 
 <%= link_to 'Edit', edit_picture_path(@picture) %> |
