--- a/app/assets/stylesheets/scaffold.css
+++ b/app/assets/stylesheets/scaffold.css
@@ -50,15 +50,15 @@ div.actions {
 
 .field_with_errors {
   padding: 2px;
-  background-color: red;
+  background-color: #e84242;
   display: table;
 }
 
 #error_explanation {
   width: 450px;
-  border: 2px solid red;
+  border: 2px #e84242;
   padding: 7px;
-  padding-bottom: 0;
+  padding-bottom: 1em;
   margin-bottom: 20px;
   background-color: #f0f0f0;
 }
@@ -70,12 +70,12 @@ div.actions {
   font-size: 12px;
   margin: -7px;
   margin-bottom: 0;
-  background-color: #c00;
+  background-color: #e84242;
   color: #fff;
 }
 
 #error_explanation ul li {
-  font-size: 12px;
+  font-size: 14px;
   list-style: square;
 }
 
