--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Pictures</h1>
 
-<table>
+<table class="table table-bordered">
   <thead>
     <tr>
       <th>Title</th>
@@ -16,9 +16,9 @@
       <tr>
         <td><%= picture.title %></td>
         <td><%= image_tag picture.url %></td>
-        <td><%= link_to 'Show', picture %></td>
-        <td><%= link_to 'Edit', edit_picture_path(picture) %></td>
-        <td><%= link_to 'Destroy', picture, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', picture, class:'btn btn-default' %></td>
+        <td><%= link_to 'Edit', edit_picture_path(picture), class:'btn btn-default' %></td>
+        <td><%= link_to 'Delete', picture, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-default' %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,4 +26,4 @@
 
 <br>
 
-<%= link_to 'New Picture', new_picture_path %>
+<%= link_to 'Add New Picture', new_picture_path %>
