--- a/app/assets/stylesheets/pictures.css
+++ b/app/assets/stylesheets/pictures.css
@@ -2,3 +2,32 @@
   Place all the styles related to the matching controller here.
   They will automatically be included in application.css.
 */
+
+img {
+  display: block;
+  margin: auto;
+  vertical-align: middle;
+  height: 27em;
+  width: 40em;
+}
+
+ul {
+  display: flex;
+  list-style-type: none;
+}
+
+.btn-default {
+  text-align: center;
+}
+
+td {
+  text-align: center;
+}
+
+.titles {
+  text-align: center;
+}
+
+#picture-title {
+  text-align: center;
+}
