--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,29 +1,27 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Pictures</h1>
+<div >
+  <%= link_to 'Add New Picture', new_picture_path, class:'btn btn-default' %>
+</div>
 
-<table class="table table-bordered">
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Picture</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @pictures.each do |picture| %>
-      <tr>
-        <td><%= picture.title %></td>
-        <td><%= image_tag picture.url %></td>
-        <td><%= link_to 'Show', picture, class:'btn btn-default' %></td>
+<!-- <h3 class="titles">Title</h3> -->
+<h3 class="titles">Miami</h3>
+      <!-- <th colspan="3"></th> -->
+
+<% @pictures.each do |picture| %>
+  <p id="picture-title"><%= picture.title %></p>
+  <%= image_tag picture.url %>
+          <ul>
+            <li><%= link_to 'Show', picture, class:'btn btn-default' %></li>
+            <li><%= link_to 'Edit', edit_picture_path(picture), class:'btn btn-default' %></li>
+            <li><%= link_to 'Delete', picture, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-default' %></li>
+          </ul>
+        <!-- <td><%= link_to 'Show', picture, class:'btn btn-default' %></td>
         <td><%= link_to 'Edit', edit_picture_path(picture), class:'btn btn-default' %></td>
-        <td><%= link_to 'Delete', picture, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-default' %></td>
-      </tr>
+        <td><%= link_to 'Delete', picture, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-default' %></td> -->
     <% end %>
-  </tbody>
-</table>
-
 <br>
 
-<%= link_to 'Add New Picture', new_picture_path %>
+<!-- <%= link_to 'Add New Picture', new_picture_path, class:'btn btn-default' %> -->
