--- a/app/assets/stylesheets/pictures.css
+++ b/app/assets/stylesheets/pictures.css
@@ -20,8 +20,8 @@ img {
   display: block;
   margin: auto;
   vertical-align: middle;
-  height: 27em;
-  width: 40em;
+  height: auto;
+  width: 100%;
 }
 
 ul {
@@ -39,7 +39,7 @@ ul {
 }
 
 #add-new {
-  text-align: center;
+  text-align: right;
 }
 
 .titles {
@@ -58,6 +58,7 @@ ul {
 #buttons ul {
     display: inline-flex;
     padding: 0;
+    padding-bottom: 10px;
 }
 
 label {
@@ -70,4 +71,14 @@ label {
 
 .actions {
   text-align: center;
+}
+
+.row {
+  height: 100%;
+  width: 100%;
+}
+
+.picture-box {
+  height: 15em;
+  padding-top: auto;
 }
