--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,44 +1,51 @@
 <div class="container">
 
-<p id="notice"><%= notice %></p>
+ <p id="notice"><%= notice %></p>
 
-<h1>MIAMI LIFE</h1>
-
-
-<!-- <h3 class="titles">Title</h3> -->
-<h3 class="titles">Miami</h3>
-<!-- <th colspan="3"></th> -->
-<div class="row">
+ <h1>MIAMI LIFE</h1>
 
 
-<% @pictures.each_with_index do |picture, index| %>
-
-<div class="col-md-3">
-
-<p class="titles picture-title"><%= picture.title %></p>
-<%= link_to picture.url, data: { lightbox: "image-1", title: picture.title } do %>
-  <%= image_tag picture.url %>
-<% end %>
-<div id="buttons">
-  <ul>
-    <li><%= link_to 'Show', picture, class:'btn btn-default' %></li>
-    <li><%= link_to 'Edit', edit_picture_path(picture), class:'btn btn-default' %></li>
-    <li><%= link_to 'Delete', picture, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-default' %></li>
-  </ul>
-</div>
-</div>
-  <% if (index = 1) % 4 == 0 %>
-</div><div class="row">
-  <% end %>
-<!-- <td><%= link_to 'Show', picture, class:'btn btn-default' %></td>
-<td><%= link_to 'Edit', edit_picture_path(picture), class:'btn btn-default' %></td>
-<td><%= link_to 'Delete', picture, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-default' %></td> -->
-<% end %>
-</div>
+ <!-- <h3 class="titles">Title</h3> -->
+ <h3 class="titles">Miami</h3>
+ <!-- <th colspan="3"></th> -->
+ <div id="add-new">
+   <%= link_to 'Add New Picture', new_picture_path, class:'btn btn-success' %>
+ </div>
 
 
-<div id="add-new">
-  <%= link_to 'Add New Picture', new_picture_path, class:'btn btn-success fa fa-plus-square fa-lg' %>
-</div>
-<!-- <%= link_to 'Add New Picture', new_picture_path, class:'btn btn-default' %> -->
+ <div class="row">
+
+
+   <% @pictures.each_with_index do |picture, index| %>
+
+   <div class="col-md-3">
+
+     <!-- <p class="titles picture-title"><%= picture.title %></p> -->
+     <div class="picture-box">
+       <%= link_to picture.url, data: { lightbox: "image-1", title: picture.title } do %>
+       <%= image_tag picture.url %>
+       <% end %>
+     </div>
+     <div id="buttons">
+       <ul>
+         <li><%= link_to 'Show', picture, class:'btn btn-default' %></li>
+         <li><%= link_to 'Edit', edit_picture_path(picture), class:'btn btn-default' %></li>
+         <li><%= link_to 'Delete', picture, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-default' %></li>
+       </ul>
+     </div>
+   </div>
+   <% if (index = 1) % 4 == 0 %>
+ </div><div class="row">
+   <% end %>
+   <!-- <td><%= link_to 'Show', picture, class:'btn btn-default' %></td>
+   <td><%= link_to 'Edit', edit_picture_path(picture), class:'btn btn-default' %></td>
+   <td><%= link_to 'Delete', picture, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-default' %></td> -->
+   <% end %>
+ </div>
+
+
+ <!-- <div id="add-new">
+   <%= link_to 'Add New Picture', new_picture_path, class:'btn btn-success' %>
+ </div> -->
+ <!-- <%= link_to 'Add New Picture', new_picture_path, class:'btn btn-default' %> -->
 </div>
