--- a/app/assets/stylesheets/scaffold.css
+++ b/app/assets/stylesheets/scaffold.css
@@ -55,7 +55,7 @@ div.actions {
 }
 
 #error_explanation {
-  width: 450px;
+  width: 400px;
   border: 2px #e84242;
   padding: 7px;
   padding-bottom: 1em;
@@ -72,6 +72,13 @@ div.actions {
   margin-bottom: 0;
   background-color: #e84242;
   color: #fff;
+}
+#error_explanation ul {
+margin-top: 15px;
+margin-bottom: 10px;
+display: flex;
+flex-direction: column;
+padding-left: 6em;
 }
 
 #error_explanation ul li {
