--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -7,10 +7,9 @@
        <span class="icon-bar"></span>
        <span class="icon-bar"></span>
      </button>
-     <a class="navbar-brand" href="#">MGP</a>
+     <a class="navbar-brand" href="/">M G P</a>
    </div>
 
-<<<<<<< HEAD
    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
      <ul class="nav navbar-nav">
        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
@@ -37,53 +36,19 @@
      </ul>
    </div>
  </div>
-=======
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li>
-          <div id="add-new">
-            <%= link_to 'Add New Picture', new_picture_path, class:'btn btn-success' %>
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
->>>>>>> d2e1b0de2330d1f403872b4be3177897d87dc7bc
 </nav>
 <div class="container">
 
 <p id="notice"><%= notice %></p>
 
-<h1>MIAMI LIFE</h1>
+<h1 class="titles">M G P</h1>
 
 
-<<<<<<< HEAD
 <!-- <h3 class="titles">Title</h3> -->
 <h3 class="titles">Miami</h3>
 <!-- <th colspan="3"></th> -->
 
 <div class="row">
-=======
- <!-- <h3 class="titles">Title</h3> -->
- <h3 class="titles">Miami</h3>
- <!-- <th colspan="3"></th> -->
->>>>>>> d2e1b0de2330d1f403872b4be3177897d87dc7bc
 
 
   <% @pictures.each_with_index do |picture, index| %>
