--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -21,7 +21,13 @@
     <%= f.text_field :url %>
   </div>
 
-  <div class="actions">
+  <!-- <div class="actions">
     <%= f.submit %>
+  </div> -->
+  <div class="modal-footer">
+    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+    <button type="button" class="btn btn-primary">  <div class="actions">
+        <%= f.submit %>
+      </div></button>
   </div>
 <% end %>
