--- a/app/views/pictures/_form.html.erb
+++ b/app/views/pictures/_form.html.erb
@@ -26,8 +26,8 @@
   </div> -->
   <div class="modal-footer">
     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-    <button type="button" class="btn btn-primary">  <div class="actions">
-        <%= f.submit %>
-      </div></button>
+    <button type="button" class="btn btn-primary">
+        <input id="submit-btn" type="submit" name="commit" value="Create Picture" data-disable-with="Create Picture">
+    </button>
   </div>
 <% end %>
