--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -12,7 +12,7 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+        <li class="active"><a href="https://www.wyncode.co">Wyncode<span class="sr-only">(current)</span></a></li>
         <li><a class="delete-button" href="#" rel="nofollow">Delete</a></li>
         <li><a class="real-delete-button" data-confirm="Are you sure?" href="#" rel="nofollow" data-method="delete" style="display: none;">Delete</a></li>
         <li class="dropdown">
@@ -73,7 +73,6 @@
 
 
 <!-- <h3 class="titles">Title</h3> -->
-<h3 class="titles">Miami</h3>
 <!-- <th colspan="3"></th> -->
 <div class="container">
 
