--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,100 +1,21 @@
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="/">M G P</a>
-    </div>
-
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-2">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="https://www.wyncode.co">Wyncode<span class="sr-only">(current)</span></a></li>
-        <li><a class="delete-button" href="#" rel="nofollow">Delete</a></li>
-        <li><a class="real-delete-button" data-confirm="Are you sure?" href="#" rel="nofollow" data-method="delete" style="display: none;">Delete</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-            <li class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li>
-          <div id="add-new">
-            <!-- Button trigger modal -->
-            <button type="button" class="btn btn-success" data-toggle="modal" data-target="#myModal">
-              Add New Photo
-            </button>
-
-            <!-- Modal -->
-            <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-              <div class="modal-dialog" role="document">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title" id="myModalLabel">Add New Photo</h4>
-                  </div>
-                  <div class="modal-body">
-                    <%= render 'form', picture: @picture %>
-
-                    <%= link_to 'Back', pictures_path %>
-
-                  </div>
-                  <!-- <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">  <div class="actions">
-                        <%#= f.submit %>
-                      </div></button>
-                  </div> -->
-                </div>
-              </div>
-            </div>
-            <!-- <%= link_to 'Add New Picture', new_picture_path, class:'btn btn-success' %> -->
-          </div>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+<%= render 'navbar' %>
 
 <p id="notice"><%= notice %></p>
 
 <h1 class="titles">M G P</h1>
 
-
-<!-- <h3 class="titles">Title</h3> -->
-<!-- <th colspan="3"></th> -->
 <div class="container">
 
   <div class="gallery-container">
 
-
     <% @pictures.each_with_index do |picture, index| %>
 
-
-    <!-- <p class="titles picture-title"><%= picture.title %></p> -->
     <div class="picture-box">
       <%= link_to picture.url, data: { lightbox: "image-1", title: picture.title, href: url_for(picture) } do %>
       <%= image_tag picture.url %>
       <% end %>
     </div>
     <div id="buttons">
-      <!-- <ul> -->
-      <!-- <li><%= link_to 'Show', picture, class:'btn btn-default' %></li> -->
-      <!-- <li><%= link_to 'Edit', edit_picture_path(picture), class:'btn btn-default' %></li> -->
-      <!-- <li><%= link_to 'Delete', picture, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-default' %></li> -->
-      <!-- <%= link_to 'Delete', picture, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-default' %> -->
-      <!-- </ul> -->
     </div>
     <% if (index = 1) % 4 == 0 %>
   </div>
@@ -104,10 +25,4 @@
   <td><%= link_to 'Delete', picture, method: :delete, data: { confirm: 'Are you sure?' }, class:'btn btn-default' %></td> -->
   <% end %>
 </div>
-
-
-<!-- <div id="add-new">
-<%= link_to 'Add New Picture', new_picture_path, class:'btn btn-success' %>
-</div> -->
-<!-- <%= link_to 'Add New Picture', new_picture_path, class:'btn btn-default' %> -->
 </div>
