--- a/app/assets/stylesheets/pictures.css
+++ b/app/assets/stylesheets/pictures.css
@@ -119,3 +119,7 @@ div.container {
   -webkit-box-shadow: 3px 3px 5px 5px black;
   box-shadow:         3px 3px 5px 5px black;
 }
+
+#notice {
+  font-weight: bold;
+}
